--- a/requirements.txt
+++ b/requirements.txt
@@ -31,15 +31,15 @@ pytz
 referencing
 requests
 rich
-rpds-py=
-six=
-smmap=
-streamlit=
-tenacity=
-toml=
+rpds-py
+six
+smmap
+streamlit
+tenacity
+toml
 tornado
 typing-extensions
-tzdata=
+tzdata
 urllib3
 watchdog
-zipp=
+zipp
